test/validator/tuple_array_open.orderly
array {
      string {0,10};
      integer;
      string;
} * {0,6};