test/negative_cases/integer_overflow.orderly
integer {0, 777777777777777777777777777777777777777777777777777777777777} maybeBigAss;
